--- a/Student_Jobsite/Pages/templates/Employer/base.html
+++ b/Student_Jobsite/Pages/templates/Employer/base.html
@@ -559,7 +559,7 @@
             </div>
 
             <nav class="nav-menu">
-                <a href="/dashboard/" class="nav-link active">
+                <a href="{% url 'employer_dashboard' %}" class="nav-link active">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
                 </a>
