--- a/Student_Jobsite/Pages/templates/Staff/base.html
+++ b/Student_Jobsite/Pages/templates/Staff/base.html
@@ -557,7 +557,7 @@
             </div>
 
             <nav class="nav-menu">
-                <a href="/dashboard/" class="nav-link active">
+                <a href="{% url 'employee_dashboard' %}" class="nav-link active">
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
                 </a>
@@ -585,8 +585,8 @@
                 <h1 class="dashboard-title">Talent War Room</h1>
                 <div class="dashboard-actions">
                     <a href="/logout/" class="btn btn-outline">Logout</a>
-                    <a href="/post-job/" class="btn btn-primary">
-                        <i class="fas fa-bolt"></i> Post a Job
+                  <a href="{% url 'available_jobs'%}" class="nav-link">
+                        <i class="fas fa-bolt"></i> Find a Job
                     </a>
                 </div>
             </div>
